# Checkers_AI

./: .clineignore  .gitignore  AGENTS.md  HERMES_RESEARCHER.md  IMPLEMENTATION-REPORT.md  README.md  TRAINING-CHANGELOG.md  package-lock.json  report.sh  start-production.bat  start.bat  stop-production.bat
.agents/skills/build-cpp-engine/: SKILL.md
.agents/skills/check-engine-status/: SKILL.md
.agents/skills/rebuild-and-restart/: SKILL.md
.agents/skills/run-game-test/: SKILL.md
.agents/skills/start-production-server/: SKILL.md
.agents/skills/stop-all-servers/: SKILL.md
.agents/skills/view-game-board/: SKILL.md
.clinerules/: 01-general.md  02-memory-bank.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  ArenaView.jsx  Controls.jsx  MiniBoard.jsx  ParamsPanel.jsx  StatsPanel.jsx  index.css
docs/: 01-game-engine.md  02-ai-model.md  03-self-play.md  04-frontend.md  05-api.md  06-security.md  07-configuration.md  08-testing.md  09-deployment.md  codeplan.md
engine/: BUILD.md  CMakeLists.txt  Dockerfile  build-msvc.bat  build.sh
engine/src/: board.cpp  board.h  engine.cpp  engine.h  main.cpp  minimax.cpp  minimax.h  movegen.cpp  movegen.h  server.cpp
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
server/: config.js  config.js.bak.20260405134359  index.js  package-lock.json  package.json  utils.js
server/ai/: buffer.js  model.js  train-worker.js  trainer.js  trainer.js.bak.20260405135328
skills/: build-cpp-engine.md
